<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">movie</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_login">登陆</string>
    <string name="regist">&lt;注册号码</string>
    <string name="forget">忘记密码&gt;</string>
    <string name="radio_film">影片</string>
    <string name="radio_cenima">影院</string>
    <string name="radio_community">社区</string>
    <string name="radio_me">我的</string>
    <string name="mid_left_btn">正在热映</string>
    <string name="mid_right_btn">即将上映</string>
    <string name="null_sign">这个人很懒，什么都没有留下……</string>
    <string name="my_account">我的账户</string>
    <string name="my_friends">我的影友</string>
    <string name="my_collect">我的收藏</string>
    <string name="details">订单详情</string>
    <string name="coupon">优惠券</string>
    <string name="settings">设置</string>
    <string name="often_cinema">常去的影院</string>
    <string name="near_cinema">附近的影院</string>
</resources>
