<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_bg"
    android:orientation="vertical" >
 <RelativeLayout 
      android:orientation="vertical"
      android:layout_width="fill_parent"
      android:layout_height="wrap_content">
   <RelativeLayout 
      android:id="@+id/top"
      android:layout_width="fill_parent"
      android:layout_height="wrap_content">
  <com.cppstudio.movie.widget.util.CircleImageView
        android:id="@+id/head_img"
        android:layout_height="100dp"
        android:layout_width="100dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginTop="8dp"
        android:src="@drawable/mm"
        app:border_color="@color/light"
        app:border_width="2dp"
        
      ></com.cppstudio.movie.widget.util.CircleImageView>
    
     <com.cppstudio.movie.widget.util.CircleImageView
         android:id="@+id/left_img"
         android:layout_height="45dp"
         android:layout_width="45dp"
         android:layout_toLeftOf="@id/head_img"
         android:layout_centerVertical="true"
         android:layout_marginRight="20dp"
         android:src="@drawable/mm"
         app:border_color="@color/light"
         app:border_width="2dp"
         ></com.cppstudio.movie.widget.util.CircleImageView>
      
     <com.cppstudio.movie.widget.util.CircleImageView
         android:id="@+id/right_img"
         android:layout_height="45dp"
         android:layout_width="45dp"
          
         android:layout_toRightOf="@id/head_img"
           android:layout_centerVertical="true"
         android:layout_marginLeft="20dp"
         android:src="@drawable/mm"
         app:border_color="@color/light"
         app:border_width="2dp"
         ></com.cppstudio.movie.widget.util.CircleImageView>
  </RelativeLayout>
   
       <TextView 
           android:id="@+id/name"
           android:layout_height="wrap_content"
           android:layout_width="wrap_content"
           android:singleLine="true"
           android:layout_below="@id/top"
           android:layout_marginTop="5dp"
            android:layout_centerHorizontal="true"
           android:gravity="center"
           android:text="啦啦啦……"
           android:textSize="10sp"/>
       <TextView 
           android:clickable="true"
           android:id="@+id/sign"
           android:layout_height="wrap_content"
           android:layout_width="wrap_content"
           android:background="@android:color/transparent"
           android:layout_below="@id/name"
           android:layout_centerHorizontal="true"
           android:gravity="top"
           android:layout_marginTop="3dp"
           android:text="@string/null_sign"
            android:textSize="10sp"/>
       </RelativeLayout>
       
    <RelativeLayout 
        android:id="@+id/account"
        android:clickable="true"
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/list_corner_top_selector">
         <TextView
        android:id="@+id/account_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_centerVertical="true"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:layout_marginLeft="10dp"
        android:text="@string/my_account"
        android:textSize="15sp"
        ></TextView>
         
        <ImageView 
       
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scaleType="centerInside"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:layout_marginRight="10dp"
        android:src="@drawable/gyu"
        ></ImageView>
    </RelativeLayout>
   
    <RelativeLayout 
        android:id="@+id/friends"
        android:clickable="true"
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:background="@drawable/list_corner_mid_selector"
        >
      <TextView
        android:id="@+id/friends_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_centerVertical="true"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:layout_marginLeft="10dp"
        android:text="@string/my_friends"
        android:textSize="15sp"
        ></TextView>
         
        <ImageView 
       
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scaleType="centerInside"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:layout_marginRight="10dp"
        android:src="@drawable/gyu"
        ></ImageView>
    </RelativeLayout>
    
    <RelativeLayout 
        android:id="@+id/collection"
        android:clickable="true"
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:background="@drawable/list_corner_bottom_selector"
        >
      <TextView
        android:id="@+id/collection_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_centerVertical="true"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:layout_marginLeft="10dp"
        android:text="@string/my_collect"
        android:textSize="15sp"
        ></TextView>
         
        <ImageView 
        
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scaleType="centerInside"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:layout_marginRight="10dp"
        android:src="@drawable/gyu"
        ></ImageView>
    </RelativeLayout>
    
      <RelativeLayout 
        android:id="@+id/order_form"
        android:clickable="true"
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/list_corner_top_selector">
        <TextView
        android:id="@+id/order_form_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_centerVertical="true"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:layout_marginLeft="10dp"
        android:text="@string/details"
        android:textSize="15sp"
        ></TextView>
         
        <ImageView 
        
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scaleType="centerInside"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:layout_marginRight="10dp"
        android:src="@drawable/gyu"
        ></ImageView>
    </RelativeLayout>
   
    <RelativeLayout 
        android:id="@+id/coupon"
        android:clickable="true"
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:background="@drawable/list_corner_mid_selector"
        >
       <TextView
        android:id="@+id/coupon_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_centerVertical="true"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:layout_marginLeft="10dp"
        android:text="@string/coupon"
        android:textSize="15sp"
        ></TextView>
         
        <ImageView 
  
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scaleType="centerInside"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:layout_marginRight="10dp"
        android:src="@drawable/gyu"
        ></ImageView>
    </RelativeLayout>
    
    <RelativeLayout 
        android:id="@+id/settings"
        android:clickable="true"
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:background="@drawable/list_corner_bottom_selector"
        >
      <TextView
        android:id="@+id/settings_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_centerVertical="true"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:layout_marginLeft="10dp"
        android:text="@string/settings"
        android:textSize="15sp"
        ></TextView>
         
        <ImageView 
        
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scaleType="centerInside"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:layout_marginRight="10dp"
        android:src="@drawable/gyu"
        ></ImageView>
    </RelativeLayout>

</LinearLayout>
